# mady-my-strava

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/actions-rs/: grcov.yml
.github/workflows/: check-test-lints.yml  grcov.yml
src/: main.rs
src/madymystrava/: main.py
tests/: test_main.py
