[package]
name = "mady-my-strava"
version = "0.1.0"
edition = "2021"
authors = ["BeneKenobi <1708125+BeneKenobi@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = "2.4.1"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.2.0"
serial_test = "2.0.0"
